@@ -6,9 +6,13 @@ plugins {
 }
 
 tasks {
+    withType<JavaExec> {
+        jvmArgs = listOf("--enable-preview", "add-modules=jdk.incubator.concurrent")
+    }
+
     withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
         kotlinOptions.jvmTarget = "19"
-        kotlinOptions.freeCompilerArgs = listOf("-Xcontext-receivers", "-Xadd-modules=jdk.incubator.concurrent")
+        kotlinOptions.freeCompilerArgs = listOf("-Xcontext-receivers", "-X--add-modules", "-Xadd-modules=jdk.incubator.concurrent")
     }
 
     withType<Test>().all {
